Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-08-13 (SVN):
    * hexenworld: Fix the software renderer segmentation fault at max
      resolution (1280x1024) with r_waterwarp:
    * r_draw.c, r_main.c, r_shared.h (sintable, intsintable): Matched
      the array sizes to those of their hexen2 counterparts.
    * d_scan.c (D_WarpScreen): Matched the rowptr and column array sizes
      to those of their hexen2 counterparts.

2011-08-13 (SVN):
    * hexenworld (R_DrawName): Did missing string constification.

2011-08-08 (SVN):
    * Added dependencies to all timidity objects in timidity/Makefile.
      In the engine makefiles, added $(TIMIDEPS) to the .PHONY list so
      that make will always make the timidity/Makefile ensuring up-to-
      date timidity/libtimidity.a.

2011-08-07 (SVN):
    * Changed GL_LoadTexture() to use texture flags, adjusted callers.

2011-08-07 (SVN):
    * docs/README.music: Adjusted for the menu entry changes.

2011-08-07 (SVN):
    * pr_exec.c (PR_Profile_f): Replaced two obvious tolower() calls by
      explicit ascii characters.

2011-08-07 (SVN):
    * menu.c: Adjusted music type menu so that midi-only or all-codecs
      can be selected.

2011-08-05 (SVN):
    * Document updates: Deleted ReleaseNotes-1.4.4, merged its content
      into ReleaseNotes-1.5.0.  Updated README.dos.  Updated the GPLv2
      document from the gnu ftp repo.  Updated rpm spec file.  Changed
      the beta version date to 2011-08-05.

2011-08-04 (SVN):
    * snd_gus.c: Did missing string constifications.

2011-08-03 (SVN):
    * gl_draw.c (GL_Upload32): Removed an unnecessary duplicated block
      of code for the no-mipmap+no-resample case.

2011-08-03 (SVN):
    * in_win.c: As per feature request #3383989, added support for the
      6th joystick axis for up movement controlled by joyupthreshold
      and joyupsensitivity. Ported from the quake2 source.

2011-08-02 (SVN):